acho que finalizei
Falta ainda muita coisa, mas estou satisfeito por hora!
espero que possa satisfazer por enquanto